--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,13 +1,26 @@
 name: Build
 
-on: [push]
+on:
+  push:
+    branches: 
+      - master
+      - release/*
+  pull_request:
+    branches:
+      - master
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macOS-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v1
       - name: Install
         run: yarn --no-progress --non-interactive --no-lockfile
       - name: Build
         run: yarn build
+      - name: Lint (Linux only)
+        run: yarn lint
+        if: matrix.os == 'ubuntu-latest'
